[build-system]
requires = ["setuptools>=61.0"]
build-backend = setuptools.build_meta"

[pyproject]
name = "jsonunwrap"
version = "0.1.0"
authors = [
    { name = "njuedominic", email="njuemugodominic@gmail.com"}
]
description = "A small python package that unpacks data from a JSON url and converts it into a csv file."
readme = "README.md"
requires-python = ">3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "pandas>=2.0.0"
]
[project.urls]
"Homepage" = "https://github.com/njuedominic/json-unwrap"
"Bug Tracker" = "https://github.com/njuedominic/json-unwrap/issues"